feat: add animated option

--- a/example/index.html
+++ b/example/index.html
@@ -58,34 +58,35 @@ Tooltip with properties:
           <p>
             In hac habitasse platea dictumst. Phasellus
             <span
-              data-tip="Hello world from bottom"
+              data-tip="Hello world from bottom, width = parent"
               data-tip-position="bottom"
               data-tip-arrow-position="center"
               data-tip-bg-color="#c3fce2"
               data-tip-text-color="black"
               data-tip-max-width="parent"
-              >hendrerit</span
-            >, mauris et congue vehicula, massa purus commodo tortor, vitae
-            efficitur mauris libero a velit. Integer lacinia mauris vitae tortor
-            finibus, euismod commodo ipsum consectetur. Etiam laoreet odio a
-            blandit hendrerit. Mauris tristique eget orci et mollis. Vestibulum
-            mattis id lacus elementum suscipit. Donec venenatis mauris eu
-            egestas porta. Vivamus porta nunc vestibulum, sagittis augue sed,
-            dapibus nisl. Donec varius blandit lorem, ut commodo purus accumsan
-            sit amet. Integer bibendum finibus nisi nec cursus. Vestibulum
-            egestas est metus, vitae mattis odio porttitor quis.
+              >hendrerit mauris</span
+            >, et congue vehicula, massa purus commodo tortor, vitae efficitur
+            mauris libero a velit. Integer lacinia mauris vitae tortor finibus,
+            euismod commodo ipsum consectetur. Etiam laoreet odio a blandit
+            hendrerit. Mauris tristique eget orci et mollis. Vestibulum mattis
+            id lacus elementum suscipit. Donec venenatis mauris eu egestas
+            porta. Vivamus porta nunc vestibulum, sagittis augue sed, dapibus
+            nisl. Donec varius blandit lorem, ut commodo purus accumsan sit
+            amet. Integer bibendum finibus nisi nec cursus. Vestibulum egestas
+            est metus, vitae mattis odio porttitor quis.
           </p>
           <p>
             Donec lacinia vitae metus eu placerat. Cras eu eros vel eros posuere
             elementum eu et eros. Morbi sed magna posuere, mattis justo eu,
             tempor purus.
             <span
-              data-tip="Hello world from left"
+              data-tip="Hello world from left width 70px"
               data-tip-position="left"
               data-tip-bg-color="#a691a2"
               data-tip-text-color="black"
               data-tip-max-width="70px"
               data-tip-arrow-position="end"
+              data-animated="true"
               >Suspendisse</span
             >
             potenti. Donec viverra pharetra metus. Donec ultricies felis non
@@ -126,11 +127,14 @@ Tooltip with properties:
           <p>
             Suspendisse rutrum sodales urna, ut suscipit lectus sagittis vel.
             Mauris vel placerat urna. Aenean ac eros eros. Aenean eu erat
-            convallis, cursus lacus eget, mattis magna. Vivamus orci augue,
-            ultrices a feugiat non, sollicitudin non libero. Donec ultricies
-            blandit est, ut tincidunt ligula tincidunt ut. Donec feugiat, dolor
-            ac fermentum maximus, ligula urna pharetra nulla, sed scelerisque
-            nunc risus id turpis. Nulla dictum nulla tellus.
+            convallis, cursus lacus eget, mattis magna.
+            <span data-tip="<img src='https://placekitten.com/90/50'>"
+              >Vivamus</span
+            >
+            orci augue, ultrices a feugiat non, sollicitudin non libero. Donec
+            ultricies blandit est, ut tincidunt ligula tincidunt ut. Donec
+            feugiat, dolor ac fermentum maximus, ligula urna pharetra nulla, sed
+            scelerisque nunc risus id turpis. Nulla dictum nulla tellus.
           </p>
         </div>
         <div id="lipsum2">
